fix(app.scss): ion title text align

--- a/src/app/app.scss
+++ b/src/app/app.scss
@@ -29,6 +29,7 @@ ion-content > div {
 .searchbar-md {
   background: #222;
 }
-.toolbar-title-md {
+ion-card-content > ion-title {
   text-align: center;
 }
+
